syntax = "proto3";

package account_super_admin;

service AccountSuperAdminService {
  rpc ListAccountSuperAdmins(ListAccountSuperAdminsRequest) 
  returns (ListAccountSuperAdminsResponse) {}
  
  rpc GetAccountSuperAdmin(GetAccountSuperAdminRequest) 
  returns (AccountSuperAdmin) {}
  
  rpc GetAccountSuperAdminByEmail(GetAccountSuperAdminByEmailRequest) 
  returns (AccountSuperAdmin) {}
  
  rpc CreateAccountSuperAdmin(CreateAccountSuperAdminRequest) 
  returns (AccountSuperAdmin) {}
  
  rpc UpdateAccountSuperAdmin(UpdateAccountSuperAdminRequest) 
  returns (AccountSuperAdmin) {}
  
  rpc DeleteAccountSuperAdmin(DeleteAccountSuperAdminRequest) 
  returns (AccountSuperAdmin) {}
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_ORGANIZATION = 1;
  ROLE_BASE = 2;
  ROLE_SUPER_ADMIN = 3;
  ROLE_USER = 4;
}

enum AccountKind {
  ACCOUNT_KIND_BASE = 0;
  ACCOUNT_KIND_ORGANIZATION = 1;
  ACCOUNT_KIND_SUPER_ADMIN = 2;
  ACCOUNT_KIND_USER = 3;
}

message AccountSuperAdmin {
  string id = 1;
  AccountKind kind = 2;
  Role role = 3;
  string displayName = 4;
  string email = 5;
  optional string password = 6;
}

message ListAccountSuperAdminsRequest {
  optional int32 page_size = 1;
  optional string next_page_cursor = 2;
}

message ListAccountSuperAdminsResponse {
  repeated AccountSuperAdmin super_admins = 1;
  string next_page_cursor = 2;
}

message GetAccountSuperAdminRequest {
  string id = 1;
}

message GetAccountSuperAdminByEmailRequest {
  string email = 1;
}

message CreateAccountSuperAdminRequest {
  string id = 1;
  string displayName = 2;
  string email = 3;
  string password = 4;
}

message UpdateAccountSuperAdminRequest {
  string id = 1;
  optional string displayName = 2;
  optional string email = 3;
}

message DeleteAccountSuperAdminRequest {
  string id = 1;
}
