syntax = "proto3";

package account_base;

service AccountBaseService {
  rpc ListAccountBases(ListAccountBasesRequest) 
  returns (ListAccountBasesResponse) {}
  
  rpc GetAccountBase(GetAccountBaseRequest) 
  returns (AccountBase) {}
  
  rpc GetAccountBaseByEmail(GetAccountBaseByEmailRequest) 
  returns (AccountBase) {}
  
  rpc CreateAccountBase(CreateAccountBaseRequest) 
  returns (AccountBase) {}
  
  rpc UpdateAccountBase(UpdateAccountBaseRequest) 
  returns (AccountBase) {}
  
  rpc DeleteAccountBase(DeleteAccountBaseRequest) 
  returns (AccountBase) {}
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_ORGANIZATION = 1;
  ROLE_BASE = 2;
  ROLE_SUPER_ADMIN = 3;
  ROLE_USER = 4;
}

enum AccountKind {
  ACCOUNT_KIND_BASE = 0;
  ACCOUNT_KIND_ORGANIZATION = 1;
  ACCOUNT_KIND_SUPER_ADMIN = 2;
  ACCOUNT_KIND_USER = 3;
}

message AccountBase {
  string id = 1;
  AccountKind kind = 2;
  Role role = 3;
  string displayName = 4;
  string email = 5;
  optional string password = 6;
}

message ListAccountBasesRequest {
  optional int32 page_size = 1;
  optional string next_page_cursor = 2;
}

message ListAccountBasesResponse {
  repeated AccountBase bases = 1;
  string next_page_cursor = 2;
}

message GetAccountBaseRequest {
  string id = 1;
}

message GetAccountBaseByEmailRequest {
  string email = 1;
}

message CreateAccountBaseRequest {
  string id = 1;
  string displayName = 2;
  string email = 3;
  string password = 4;
}

message UpdateAccountBaseRequest {
  string id = 1;
  optional string displayName = 2;
  optional string email = 3;
}

message DeleteAccountBaseRequest {
  string id = 1;
}
