syntax = "proto3";

package authentication_super_admin;

service AuthenticationSuperAdminService {
  rpc RegisterAccountSuperAdmin(RegisterAccountSuperAdminRequest) 
  returns (RegisterAccountSuperAdminResponse) {}
  
  rpc LoginAccountSuperAdmin(LoginAccountSuperAdminRequest) 
  returns (LoginAccountSuperAdminResponse) {}
  
  rpc ValidateAccountSuperAdmin(ValidateAccountSuperAdminRequest) 
  returns (ValidateAccountSuperAdminResponse) {}
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_ORGANIZATION = 1;
  ROLE_BASE = 2;
  ROLE_SUPER_ADMIN = 3;
  ROLE_USER = 4;
}

message RegisterAccountSuperAdminRequest {
  string displayName = 1;
  string email = 2;
  string password = 3;
}

message RegisterAccountSuperAdminResponse {
  Role role = 1;
  string displayName = 2;
  string email = 3;
  string password = 4;
}

message LoginAccountSuperAdminRequest {
  string id = 1;
  Role role = 4;
}

message LoginAccountSuperAdminResponse {
  string access_token = 1;
}

message ValidateAccountSuperAdminRequest {
  string email = 1;
  string password = 2;
}

message ValidateAccountSuperAdminResponse {
  string id = 1;
  Role role = 2;
  string displayName = 3;
  string email = 4;
  string password = 5;
}
